--- a/index.html
+++ b/index.html
@@ -207,6 +207,28 @@
           <div class="work-list">
             <div class="work-item wow fadeInUp">
               <div class="row">
+                <div class="col-sm-6 col-sm-push-1">
+                  <div class="imgbox">
+                    <div class="imgbox__inner imgbox__inner--2-1">
+                      <div class="image" style="background-image: url('img/lemoncheese1.jpg');">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-4 col-sm-push-1">
+                  <div class="work-item__text">
+                    <h3 class="work-item__title work-item__title--right">LemonCheese外送平台APP UI設計</h3>
+                    <p class="work-item__intro">2020 年 11 月 - 2020 年 12 月<br>
+                      身為外送平台的使用者，體驗多次後整理出一些想法。設計介面，改善先前的不良體驗，加入新功能『美食地圖』，讓外送平台不再只是訂餐的工具。<br>
+                      <br>使用技術 : Sketch + Photoshop + illustartor</p>
+                    <a data-toggle="modal" data-target="#myModal-0" class="text-btn text-btn--primary text-btn--lg">Show
+                      More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="work-item wow fadeInUp">
+              <div class="row">
                 <div class="col-sm-6 col-sm-push-6">
                   <div class="imgbox">
                     <div class="imgbox__inner imgbox__inner--2-1">
@@ -345,6 +367,56 @@
         </div>
       </div>
       <!-- End work -->
+      <!-- Start modal-0 -->
+      <div id="myModal-0" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+              <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                  <li data-target="#myCarousel" data-slide-to="1"></li>
+                  <li data-target="#myCarousel" data-slide-to="2"></li>
+                  <li data-target="#myCarousel" data-slide-to="3"></li>
+                </ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <img src="img/lemoncheese1.jpg" alt="" style="width:99.8%;height: 99.8%;">
+                  </div>
+                  <div class="item">
+                    <img src="img/lemoncheese2.jpg" alt="" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="img/lemoncheese3.jpg" alt="" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="img/lemoncheese4.jpg" alt="" style="width:100%;">
+                  </div>
+                  <div class="item">
+                    <img src="img/lemoncheese5.jpg" alt="" style="width:100%;">
+                  </div>
+                </div>
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                  <span class="icon-left-open"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                  <span class="icon-right-open"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End modal-0 -->
       <!-- Start modal-1 -->
       <div id="myModal-1" class="modal fade" role="dialog">
         <div class="modal-dialog modal-dialog-centered modal-lg">
