--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div id="about" class="quote bg-color-white lean-bg--top lean-bg--no-margin">
         <div class="container">
           <h2 class="subtitle u-text-center wow bounceInUp">ABOUT ME</h2>
-          <div class="row">
+          <div class="row" style="padding-top: 40px;">
             <div class="col-md-5">
               <div class="hero__bgimg__bg">
                 <div class="hero__bgimg"></div>
